--- a/logics.org
+++ b/logics.org
@@ -38,7 +38,7 @@
 - [ ] [[http://www.highdefinitionwallpapers1080p.com/][highdefinitionwallpapers1080p.com]]
 *** Non WP
 - [ ] [[http://www.ouchpress.com/celebrities/wallpapers/1861/][ouchpress.com]]
-- [ ] [[pichost.me]]
+- [ ] [[pichost.me]] #1234567
 - [ ] [[http://www.desktopwallpapers4.me/][desktopwallpapers4.me]]
 - [ ] [[http://www.suffcon.com/][suffcon]]
 - [ ] [[http://www.wallconvert.com/][wallconvert]]
