--- a/logics.org
+++ b/logics.org
@@ -37,19 +37,19 @@
    berurut, maka tinggal di-/looping/, kalau tidak secara manual gunakan
    /category/.
 *** WP
-- [ ] [[http://www.highdefinitionwallpapers1080p.com/][highdefinitionwallpapers1080p.com]] #
+- [ ] [[highdefinitionwallpapers1080p.com/][highdefinitionwallpapers1080p.com]] #
 *** Non WP
 - [ ] [[ouchpress.com/celebrities/wallpapers/1861/][ouchpress.com]]
 - [ ] [[pichost.me]] #1234567
-- [ ] [[http://www.desktopwallpapers4.me/][desktopwallpapers4.me]]
-- [ ] [[http://www.suffcon.com/][suffcon.com]]
-- [ ] [[http://www.wallconvert.com/][wallconvert.com]]
-- [ ] [[http://www.superbwallpapers.com/][superbwallpapers.com]]
-- [ ] [[http://wakpaper.com/][wakpaper.com]]
-- [ ] [[http://www.girlhdwalls.com/][girlhdwalls.com]]
-- [ ] [[http://wallpaper.mobileinterview.org/][wallpaper.mobileinterview.org]]
-- [ ] [[http://www.free-hdwallpapers.com/][free-hdwallpapers.com]]
-- [ ] [[http://www.zastavki.com/][zastavki.com]]
+- [ ] [[desktopwallpapers4.me/][desktopwallpapers4.me]]
+- [ ] [[suffcon.com/][suffcon.com]]
+- [ ] [[wallconvert.com/][wallconvert.com]]
+- [ ] [[superbwallpapers.com/][superbwallpapers.com]]
+- [ ] [[wakpaper.com/][wakpaper.com]]
+- [ ] [[girlhdwalls.com/][girlhdwalls.com]]
+- [ ] [[wallpaper.mobileinterview.org/][wallpaper.mobileinterview.org]]
+- [ ] [[free-hdwallpapers.com/][free-hdwallpapers.com]]
+- [ ] [[zastavki.com/][zastavki.com]]
 * Challenge
 ** prevent from crawl error algo
 ** Blank referer
