--- a/logics.org
+++ b/logics.org
@@ -36,9 +36,9 @@
    Untuk yang *non-wp*, dilihat dulu dari url, kalo menggunakan sistem url
    berurut, maka tinggal di-/looping/, kalau tidak secara manual gunakan
    /category/.
-*** WP
+** WP
 - [ ] [[highdefinitionwallpapers1080p.com/][highdefinitionwallpapers1080p.com]] #
-*** Non WP
+** Non WP
 - [ ] [[ouchpress.com/celebrities/wallpapers/1861/][ouchpress.com]]
 - [ ] [[pichost.me]] #1234567
 - [ ] [[desktopwallpapers4.me/][desktopwallpapers4.me]]
