testing create ascii table

--- a/logics.org
+++ b/logics.org
@@ -75,3 +75,11 @@
          })
      data = urllib2.urlopen(req).read()
    #+END_SRC
+
+* Tesing bikin table
+#+BEGIN_SRC text
+| URL    | Status |
+|--------+--------|
+| blabla | 0      |
+| blibli | 1      |
+#+END_SRC
