--- a/logics.org
+++ b/logics.org
@@ -55,6 +55,7 @@
 - [ ] [[zastavki.com/][zastavki.com]]
 - [ ] [[hdwallpapers.net]]
 - [ ] [[santabanta.com/wallpapers/][santabanta.com/wallpapers]]
+- [ ] [[3dwallpaperstudio.com/]]
 ** Manual
    Sesuai namanya, kita browse dan download wallpaper secara manual.
 * Challenge
