adding non-wp source

--- a/logics.org
+++ b/logics.org
@@ -56,6 +56,8 @@
 - [ ] [[hdwallpapers.net]]
 - [ ] [[santabanta.com/wallpapers/][santabanta.com/wallpapers]]
 - [ ] [[3dwallpaperstudio.com/]]
+- [ ] [[nevseoboi.com.ua/]]
+- [ ] [[bankoboev.ru/]]
 ** Manual
    Sesuai namanya, kita browse dan download wallpaper secara manual.
 * Challenge
