adding non-wp source

--- a/logics.org
+++ b/logics.org
@@ -58,6 +58,7 @@
 - [ ] [[3dwallpaperstudio.com/]]
 - [ ] [[nevseoboi.com.ua/]]
 - [ ] [[bankoboev.ru/]]
+- [ ] [[gamewallpapers.com]]
 ** Manual
    Sesuai namanya, kita browse dan download wallpaper secara manual.
 * Challenge
