--- a/logics.org
+++ b/logics.org
@@ -59,6 +59,7 @@
 - [ ] [[nevseoboi.com.ua/]]
 - [ ] [[bankoboev.ru/]]
 - [ ] [[gamewallpapers.com]]
+- [ ] [[zordor.com]]
 ** Manual
    Sesuai namanya, kita browse dan download wallpaper secara manual.
 * Challenge
